Fix spacing on button text.

--- a/src/app/pages/project/project.component.scss
+++ b/src/app/pages/project/project.component.scss
@@ -2,6 +2,7 @@
   margin-right: 1rem;
 }
 
-.fa-share-square {
+.fa-share-square,
+.fa-file-code {
   margin-right: 0.4rem;
 }
